# mapmind-agentic-workspace

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RECOVERY_AUDIT.md  SECURITY.md  SUPPORT.md
.claude/: launch.json
.github/: pull_request_template.md
.playwright-cli/: page-2026-04-17T18-12-24-474Z.yml
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: chat_routes.py  deps.py  route_helpers.py  routes.py
backend/app/core/: config.py
backend/app/llm/: __init__.py  base.py  catalog.py  contracts.py  gemini_provider.py  openai_provider.py  prompt_templates.py  registry.py  schemas.py
backend/app/mcp_server/: __init__.py  __main__.py  server.py  tools.py
backend/app/models/: api.py  domain.py
backend/app/services/: assessment_service.py  bootstrap.py  chat_orchestrator.py  debug_log_service.py  gemini_planner.py  obsidian_export.py  proposal_normalizer.py  proposal_planner.py  proposal_repairer.py  proposal_validator.py  quiz_service.py  repository.py  repository_config.py  repository_storage.py  study_assistant.py  zone_style_service.py
backend/tests/: test_apply_routes.py  test_chat_persistence.py  test_debug_log_service.py  test_gemini_planner_runtime.py  test_gemini_planner_validation.py  test_llm_contracts.py  test_mcp_server_tools.py  test_openai_provider.py  test_proposal_planner_runtime.py  test_proposal_planner_validation.py  test_quiz_routes.py  test_quiz_service.py  test_repository_graphs.py  test_workspace_config_and_assistant.py
contracts/: README.md  (+1 more)
(+125 files in other folders)
